--- a/apssamp.tex
+++ b/apssamp.tex
@@ -85,8 +85,11 @@ findings that conventional indicators for the spin glass transition, including
 the Binder ratio and the correlation length do not show any indication of a 
 transition for rather low temperatures.  However, the ratio of spin glass 
 susceptibilities do show crossing behavior, albeit a systematic analysis 
-is beyond the reach of the present data. This calls for a more thorough study 
-of the three dimensional Edwards-Anderson model in an external field. 
+is beyond the reach of the present data. 
+This reveals the difficulty with current numerical methods and computing capability
+in studying this problem.
+%This calls for a more thorough study 
+%of the three dimensional Edwards-Anderson model in an external field. 
 
 
 \iffalse
@@ -267,7 +270,9 @@ memory. We achieve a performance of 33ps per spin flip attempt on a GTX 580 card
 We use the CURAND implemented XORWOW generator to generate random numbers \cite{curand}.
 Since the GPU is a commodity hardware and widely available in large
 computer clusters, it is now easy to greatly accelerate these 
-simulations. The details of the implementation can be found in Ref \onlinecite{Fang-Feng-Tam-etal-2013}. 
+simulations. 
+The details of the implementation can be found in 
+Ref \onlinecite{Fang-Feng-Tam-etal-2013}. 
 %\cite{Zhang:2012:AAS:2259016.2259037,Weigel:2012:PPS:2151219.2151631,preis2011gpu,Preis:2009:GAM:1537305.1537344,Nguyen:2010:BOS:1884643.1884658,Micikevicius:2009:FDC:1513895.1513905,Maruyama:2011:PIP:2063384.2063398,doi:10.1142/S0129183112400025,DBLP:journals/ijpp/HawickLP11,CSTN-093,2012JCoPh.231.1209K,2012arXiv1204.6193M,2012arXiv1204.6192Y,2011CoPhC.182.1833W,2011arXiv1107.5463W,2010CoPhC.181.1549B,2010arXiv1006.2566B}
 
 
@@ -392,6 +397,7 @@ This is one of the prominent hurdles of using higher momentum susceptibility as 
 We note that the effective one dimensional model also shows crossing behavior,
 albeit the crossing points do not show a systematic trend\cite{Larson-etal-2013}.
 
+
 \begin{figure}[ht]
   \includegraphics[width=0.45\textwidth]{img/eq_l10.pdf}
   \caption{\label{fig:MCsteps} $R_{12}$ for $L=10$ at $\beta=1.8$, as a function of the 
@@ -408,6 +414,7 @@ averaging.}
 realizations from fifteen thousand to two hundred forty thousand.}
 \label{fig:R12_l10_samples}
 \end{figure}
+
 
 We studied the distribution of the susceptibilities. We calculated the susceptibility
 for each disorder realization, and plotted the histogram at the lowest temperature,
@@ -430,6 +437,7 @@ Here, we used the geometrical average over the susceptibilities to find $R_{12}$
 as shown in Fig \ref{fig:r12_gmean}.
 We see that the lines are quite different from those obtained with arithmetic 
 mean, and the crossings appear at different temperatures. 
+
 
 \begin{figure}[ht]
   \centering
@@ -461,17 +469,25 @@ Although we can not reach a definitive conclusion on whether a spin glass phase
 transition under a finite magnetic field,
 we show that the distribution of susceptibilities are not normally distributed 
 and mean is dominated by rare events.
+This shows that the current numerical methods and computing capability are 
+still limited and not robust enough to provide an insight into the nature 
+of spin glass in 3D, and that we need either a different method to study the 
+distribution of data, or an exponential increase in computing power, to gain 
+more knowledge in this field.
 
-This calls for a more thorough study on the model with different approaches.
-Possible directions include: 1) using models with continuous random distribution which are 
-easier to thermalize than that with bimodal distribution; 2) analyzing the
-data for the distribution of the overlap parameter, instead of average quantities. We notice a preprint before
+
+%This calls for a more thorough study on the model with different approaches.
+%Possible directions include: 1) using models with continuous random distribution which are 
+%easier to thermalize than that with bimodal distribution; 2) analyzing the
+%data for the distribution of the overlap parameter, instead of average quantities. 
+
+We notice a preprint before
 we finished the present paper where the conditioning variate method
 is used to expose the silent features from the data \cite{Baity-Jesi-etal-2014}. 
 
 
 \appendix
-\section{Additional discussion}
+\section{System with L=16}
 
 We further tested with a bigger system size, $L=16$. We used 11,200 realizations,
 and divide them into four batches, each containing 2800 samples. We then calculated
