Updating conclusion, adding reference for geometric average

--- a/apssamp.bib
+++ b/apssamp.bib
@@ -1958,3 +1958,17 @@ archivePrefix = "arXiv",
 }
 
 
+@article{PhysRevB.88.134204,
+  title = {Typical versus averaged overlap distribution in spin glasses: Evidence for droplet scaling theory},
+  author = {Monthus, C\'ecile and Garel, Thomas},
+  journal = {Phys. Rev. B},
+  volume = {88},
+  issue = {13},
+  pages = {134204},
+  numpages = {13},
+  year = {2013},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevB.88.134204},
+  url = {http://link.aps.org/doi/10.1103/PhysRevB.88.134204}
+}
