--- a/apssamp.tex
+++ b/apssamp.tex
@@ -478,12 +478,21 @@ in the $R_{12}$ calculated from the geometric average.
 %%%%%%%%%%%% adding
 The results is obtained with a very small external field, $h=0.1$. It is possible
 that a larger field, such as $h=0.25$, would give us a stronger signal of crossing.
-However, as the result stands now, we cannot find a clear phase transition in 
-h=0.1, and if there were no phase transition, it would also rule out the possibility 
-of the transition occurring in a larger field. On the other hand, if we found evidence 
-for the absence of a transition at h=0.25, we cannot determine if the spin glass 
-phase would survive a smaller field like h=0.1. Therefore, we think using h=0.1 
-is more appropriate for the problem we are studying.
+While this may give us a slightly clearer signal on the phase transition, should 
+the transition exist at h=0.25, it would likely be at quite a bit lower temperature
+which further jeopardizes the quality of the simulation data. As the result stands now, 
+we cannot find a clear phase transition in h=0.1, and if there were no phase transition, 
+it would also rule out the possibility of the transition occurring in a larger field. 
+On the other hand, if we found evidence for the absence of a transition at h=0.25, we 
+cannot determine if the spin glass phase would survive a smaller field like h=0.1. 
+There is no simple rule of thumb which can be used to determine what value of h is 
+the best for the purpose of answering the question on the existence of the transition under an 
+external magnetic field. But we believe that the possible advantage of using h=0.25 does
+not outweigh the advantage of using h=0.1, both in term of the difficult of the simulation, and
+the predictive power. Therefore, we think using h=0.1 is appropriate  
+for the problem we are studying.
+
+
 %%%%%%%%%%%%
 
 %%%%%%%%%%%%% adding
